--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,8 +21,9 @@
         <whitelist>
             <directory>./</directory>
             <exclude>
-                <directory>./Resources/</directory>
-                <directory>./Tests/</directory>
+                <directory>./Resources</directory>
+                <directory>./Tests</directory>
+                <directory>./vendor</directory>
             </exclude>
         </whitelist>
     </filter>
